--- a/src/app/pages/hotels/hotels.component.css
+++ b/src/app/pages/hotels/hotels.component.css
@@ -3,6 +3,31 @@
 /* ---------------------------------------------------------- */
 @media screen and (max-width:599px) {
 
+  .hotels-container{
+    width: 100%;
+	padding: 1%;
+	padding:10px max(10px,2vw);
+	display: grid;
+	justify-content: space-around;
+	grid-template-areas: 'a a' 'b b' 'c c' 'd d';
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 10px;
+
+  }
+
+  .hotels-container div:first-child{
+    grid-area: a;
+  }
+  .hotels-container div:nth-child(2){
+    grid-area: b;
+  }
+  .hotels-container div:nth-child(3){
+    grid-area: c;
+  }
+  .hotels-container div:nth-child(4){
+    grid-area: d;
+  }
+
   .hotel_card {
     position: relative;
     border-radius: 10px;
@@ -44,6 +69,19 @@
     color: white;
   }
 
+  .sticker_tip {
+
+    background: red;
+    color: white;
+    width: 100px;
+    position: absolute;
+    text-align: center;
+    right: 20px;
+    padding: 10px;
+    top: 20px;
+    border-radius: 10px;
+  }
+
 }
 /* ---------------------------------------------------------- */
 /* END Mobile CSS */
@@ -52,6 +90,88 @@
 /* BEGIN Tablet CSS */
 /* ---------------------------------------------------------- */
 @media screen and (min-width:600px) {
+
+
+
+
+  .hotels-container{
+    width: 100%;
+	padding: 1%;
+	display: grid;
+	justify-content: space-around;
+	grid-template-areas: 'a b' 'c d';
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 0;
+
+  }
+
+  .hotels-container div:first-child{
+    grid-area: a;
+  }
+  .hotels-container div:nth-child(2){
+    grid-area: b;
+  }
+  .hotels-container div:nth-child(3){
+    grid-area: c;
+  }
+  .hotels-container div:nth-child(4){
+    grid-area: d;
+  }
+
+  .hotel_card {
+    position: relative;
+    border-radius: 10px;
+    margin: 10px;
+    background:#F2F2F2;
+  }
+
+  .hotel_card img {
+    height: 200px;
+    padding: 10px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+  }
+
+  .hotel_card_text {
+    height: 400px;
+    padding: 10px;
+  }
+
+  .hotel_name {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  .hotel_desc {
+    font-size: 16px;
+    font-style:italic;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  .hotel_card button {
+    position: absolute;
+    border: 0;
+    background: black;
+    padding: 10px;
+    border-radius: 0 0 10px 10px;
+    bottom: 0;
+    width: 100%;
+    color: white;
+  }
+
+  .sticker_tip {
+
+    background: red;
+    color: white;
+    width: 100px;
+    position: absolute;
+    text-align: center;
+    right: 20px;
+    padding: 10px;
+    top: 20px;
+    border-radius: 10px;
+  }
 
 }
 /* ---------------------------------------------------------- */
@@ -62,6 +182,43 @@
 /* BEGIN Desktop CSS */
 /* ---------------------------------------------------------- */
 @media screen and (min-width:992px) {
+
+  .hotel_card img {
+    height: 400px;
+    float: left;
+    padding: 10px;
+    width: 50%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.hotel_card button {
+  position: absolute;
+  border: 0;
+  background: #ffffff;
+  padding: 10px;
+  border-radius: 10px;
+  bottom: 20px;
+  right: 20px;
+  color: black;
+  width: unset;
+}
+
+
+.sticker_tip {
+
+  background: red;
+  color: white;
+  width: 100px;
+  position: absolute;
+  text-align: center;
+  left: 20px;
+  padding: 10px;
+  top: 20px;
+  border-radius: 10px;
+}
+
+
 }
 /* ---------------------------------------------------------- */
 /* END Mobile CSS */
