--- a/src/app/pages/hotels/hotels.component.html
+++ b/src/app/pages/hotels/hotels.component.html
@@ -1,12 +1,14 @@
 <div class="hotels-container">
 
   <div class="hotel_card">
+    <div class="sticker_tip">NÁŠ TIP</div>
     <div class="hotel_card_img">
     <img src="{{hotelData[0].hotelImg}}">
   </div>
   <div class="hotel_card_text">
     <div class="hotel_name">{{hotelData[0].hotelName}}</div>
     <div class="hotel_desc">{{hotelData[0].hotelDescription}}</div>
+
   </div>
   <a href="">
     <button>Preskúmať</button>
