added js to hotelpages

--- a/src/app/pages/hotelpage/hotelpage.component.html
+++ b/src/app/pages/hotelpage/hotelpage.component.html
@@ -88,7 +88,7 @@
 <h2 style="text-align:center">Slideshow Gallery</h2>
 
 <div class="slideshow-container">
-  <div class="mySlides">
+  <div class="mySlides" style="display: block;">
     <div class="numbertext">1 / 6</div>
     <img src="http://localhost:4200/assets/hotels_files/iberotel_costa_mares/title_photo.jpg" style="width:100%">
   </div>
@@ -146,4 +146,3 @@
     </div>
   </div>
 </div>
-<script src="\src\scripts.js"></script>
