--- a/src/app/pages/hotelpage/hotelpage.component.css
+++ b/src/app/pages/hotelpage/hotelpage.component.css
@@ -1,91 +1,94 @@
 
-/* Position the image slideshow-container (needed to position the left and right arrows) */
-.slideshow-container {
-  position: relative;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* slideshow-container for image text */
-.caption-slideshow-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
 /* BEGIN Mobile CSS */
 /* ---------------------------------------------------------- */
 @media screen and (max-width:599px) {
 
+  .hotelpage_container {
+    margin: 10px;
+    padding: 10px;
+    background: #F2F2F2;
+    border-radius: 10px;
+  }
+
+
+  .hotelpage_content-header h1 {
+    padding: 10px;
+    text-align: center;
+    font-weight: 700;
+  }
+
+  .hotelpage_content-header p {
+    margin: 0;
+    text-align: center;
+  }
+
+ /* _____________________BEGIN SWIPERJS CSS _____________________ */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+.mySwiper2 {
+  height: 80%;
+  width: 100%;
+}
+.mySwiper {
+  height: 20%;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/* _____________________END SWIPERJS CSS _____________________ */
+
+/* _____________________BEGIN SWIPERJS CUSTOM CSS _____________________ */
+
+.hotel_images img {
+    border-radius: 10px;
+    object-fit: cover;
+    width: 100%;
+    max-height: 190px;
+}
+.hotel_images_thumbs img{
+  height: 50px;
+    border-radius: 10px;
+    object-fit: cover;
+    width: 100%;
+
+}
+/* _____________________END SWIPERJS CUSTOM CSS _____________________ */
 
 
 }
