--- a/src/app/pages/hotelpage/hotelpage.component.html
+++ b/src/app/pages/hotelpage/hotelpage.component.html
@@ -1,61 +1,106 @@
+<div class="hotelpage_container">
 
-<h2 style="text-align:center">{{hotelData[0].hotelName}}</h2>
+  <div class="hotelpage_swiper">
 
-<div class="slideshow-container" *ngIf="hotelData">
-  <div class="mySlides" style="display: block;">
-    <div class="numbertext">1 / 6</div>
-    <img src="{{hotelData[0].hotelImg}}" style="width:100%">
+<swiper
+style="--swiper-navigation-color: rgb(238, 0, 0);--swiper-pagination-color: #fff"
+[loop]="true"
+[spaceBetween]="10"
+[navigation]="false"
+[thumbs]="{ swiper: thumbsSwiper }"
+class="mySwiper2"
+    >
+      <ng-template swiperSlide>
+        <div class="hotel_images">
+          <img src="{{hotelData[0].hotelImg}}">
+        </div>
+
+      </ng-template>
+
+      <ng-template swiperSlide>
+        <div class="hotel_images">
+          <img src="{{hotelData[0].hotelImg_1}}">
+        </div>
+      </ng-template>
+
+      <ng-template swiperSlide>
+        <div class="hotel_images">
+          <img src="{{hotelData[0].hotelImg2}}">
+        </div>
+      </ng-template>
+
+      <ng-template swiperSlide>
+        <div class="hotel_images">
+          <img src="{{hotelData[0].hotelImg3}}">
+        </div>
+      </ng-template>
+
+      <ng-template swiperSlide>
+        <div class="hotel_images">
+          <img src="{{hotelData[0].hotelImg4}}">
+        </div>
+      </ng-template>
+
+      <ng-template swiperSlide>
+        <div class="hotel_images">
+          <img src="{{hotelData[0].hotelImg5}}">
+        </div>
+      </ng-template>
+
+    </swiper>
+    <swiper
+    (swiper)="thumbsSwiper = $event"
+    [loop]="true"
+    [spaceBetween]="10"
+    [slidesPerView]="4"
+    [freeMode]="true"
+    [watchSlidesProgress]="true"
+    class="mySwiper"
+    >
+    <ng-template swiperSlide>
+      <div class="hotel_images_thumbs">
+        <img src="{{hotelData[0].hotelImg}}">
+      </div>
+
+    </ng-template>
+
+    <ng-template swiperSlide>
+      <div class="hotel_images_thumbs">
+        <img src="{{hotelData[0].hotelImg_1}}">
+      </div>
+    </ng-template>
+
+    <ng-template swiperSlide>
+      <div class="hotel_images_thumbs">
+        <img src="{{hotelData[0].hotelImg2}}">
+      </div>
+    </ng-template>
+
+    <ng-template swiperSlide>
+      <div class="hotel_images_thumbs">
+        <img src="{{hotelData[0].hotelImg3}}">
+      </div>
+    </ng-template>
+
+    <ng-template swiperSlide>
+      <div class="hotel_images_thumbs">
+        <img src="{{hotelData[0].hotelImg4}}">
+      </div>
+    </ng-template>
+
+    <ng-template swiperSlide>
+      <div class="hotel_images_thumbs">
+        <img src="{{hotelData[0].hotelImg5}}">
+      </div>
+    </ng-template>
+    </swiper>
   </div>
-  <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
-    <img src="{{hotelData[0].hotelImg_1}}" style="width:100%">
+
+  <div class="hotelpage_content">
+    <header class="hotelpage_content-header">
+    <h1>{{hotelData[0].hotelName}}</h1>
+    <p>{{hotelData[0].hotelDescription}}</p>
+    </header>
   </div>
 
-  <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
-    <img src="{{hotelData[0].hotelImg2}}" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
-    <img src="{{hotelData[0].hotelImg3}}" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
-    <img src="{{hotelData[0].hotelImg4}}" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-    <img src="{{hotelData[0].hotelImg5}}" style="width:100%">
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
-
-  <div class="caption-slideshow-container">
-    <p id="caption"></p>
-  </div>
-
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="{{hotelData[0].hotelImg}}" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="{{hotelData[0].hotelImg_1}}" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="{{hotelData[0].hotelImg2}}" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="{{hotelData[0].hotelImg3}}" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="{{hotelData[0].hotelImg4}}" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="{{hotelData[0].hotelImg5}}" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-    </div>
-  </div>
 </div>
