updated hotels pages and website max width

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -399,6 +399,10 @@ width: 100%;
 /* BEGIN Desktop CSS */
 /* ---------------------------------------------------------- */
 @media screen and (min-width:992px) {
+  .homepage-container{
+    max-width: 1000px;
+    margin: 0 auto;
+  }
 
   #main-static-slider{
     width: 100%;
