--- a/src/app/pages/hotels/hotels.component.html
+++ b/src/app/pages/hotels/hotels.component.html
@@ -8,7 +8,7 @@
       <div class="hotel_name">{{hData.hotelName}}</div>
       <div class="hotel_desc">{{hData.hotelDescription}}</div>
     </div>
-    <a [routerLink]="['/hotels', hData.id]">
+    <a [routerLink]="['/hotels', hData.hotelName]">
       <button>Prezrieť</button>
     </a>
   </div>
