--- a/src/app/pages/hotelpage/hotelpage.component.css
+++ b/src/app/pages/hotelpage/hotelpage.component.css
@@ -6,8 +6,7 @@
   .hotelpage_container {
     margin: 10px;
     padding: 10px;
-    background: #F2F2F2;
-    border-radius: 10px;
+
   }
 
 
@@ -100,6 +99,95 @@
 /* ---------------------------------------------------------- */
 @media screen and (min-width:600px) {
 
+
+  .hotelpage_container {
+    margin: 10px;
+    padding: 10px;
+  }
+
+
+  .hotelpage_content-header h1 {
+    padding: 10px;
+    text-align: left;
+    font-weight: 700;
+  }
+
+  .hotelpage_content-header p {
+
+    padding: 10px;
+    margin: 0;
+    text-align: left;
+  }
+
+ /* _____________________BEGIN SWIPERJS CSS _____________________ */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+.mySwiper2 {
+  height: 80%;
+  width: 100%;
+}
+.mySwiper {
+  height: 20%;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/* _____________________END SWIPERJS CSS _____________________ */
+
+/* _____________________BEGIN SWIPERJS CUSTOM CSS _____________________ */
+
+.hotel_images img {
+    border-radius: 10px;
+    object-fit: cover;
+    width: 100%;
+    max-height: 500px;
+}
+.hotel_images_thumbs img{
+  height: 150px;
+    border-radius: 10px;
+    object-fit: cover;
+    width: 100%;
+
+}
+/* _____________________END SWIPERJS CUSTOM CSS _____________________ */
+
+
 }
 /* ---------------------------------------------------------- */
 /* END Mobile CSS */
@@ -109,6 +197,11 @@
 /* BEGIN Desktop CSS */
 /* ---------------------------------------------------------- */
 @media screen and (min-width:992px) {
+
+  .hotelpage_container{
+    max-width: 1000px;
+    margin: 0 auto;
+  }
 
 
 }
