--- a/src/app/sharepages/footer/footer.component.css
+++ b/src/app/sharepages/footer/footer.component.css
@@ -6,7 +6,6 @@
     max-width: 100%;
     background: black;
     color: white;
-    border-radius: 20px 20px 0 0;
   }
 
   .footer-brand {
@@ -91,7 +90,6 @@
     max-width: 100%;
     background: black;
     color: white;
-    border-radius: 20px 20px 0 0;
   }
 
   .footer-links{
@@ -154,7 +152,7 @@
   }
 
   .footer-bottom {
-    color: black;
+    color: rgb(255, 255, 255);
     text-align: center;
     position: relative;
     margin-left: 10px;
@@ -163,11 +161,16 @@
   .break-line {
     margin: 10px 0px;
     height: 1px;
-    background: rgb(0, 0, 0);
+    background: #FFF;
   }
   .footer-bottom-container {
+    width: 100%;
     margin-top: 60px;
-    background: white;
+    background: rgb(0, 0, 0);
+  }
+  .footer-bottom-container p{
+    margin: 0;
+    padding-bottom: 20px;
   }
 
 }
@@ -179,6 +182,12 @@
 /* BEGIN Desktop CSS */
 /* ---------------------------------------------------------- */
 @media screen and (min-width:992px) {
+
+  .row-footer {
+
+    max-width: 1000px;
+    margin: 0 auto;
+  }
 
   .footer-brand {
     width: 53%;
