--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-<div id="main">
+<router-outlet></router-outlet>
 
-<!-- navbar -->
+
+<!--<div id="main">
+
   <app-navbar></app-navbar>
 
-<!-- content -->
   <router-outlet></router-outlet>
 
-<!-- footer -->
+ footer
   <app-footer></app-footer>
 
-</div>
+</div>-->
