--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<router-outlet></router-outlet>
-
-
-<!--<div id="main">
+<div id="main">
 
   <app-navbar></app-navbar>
 
   <router-outlet></router-outlet>
 
- footer
   <app-footer></app-footer>
 
-</div>-->
+</div>
