--- a/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,5 @@
-<p>admin-dashboard works!</p>
+<app-admin-header></app-admin-header>
+
+<router-outlet></router-outlet>
+
+<app-admin-footer></app-admin-footer>
