--- a/src/app/modules/admin/components/admin-header/admin-header.component.css
+++ b/src/app/modules/admin/components/admin-header/admin-header.component.css
@@ -1,13 +1,27 @@
 /* BEGIN Mobile CSS */
 /* ---------------------------------------------------------- */
 @media screen and (max-width:599px) {
+  .navbar .container-fluid {
+    display: flex;
+    flex-direction: column;
 
+  }
   .navbar {
-    background: white;
+    background: rgb(0, 0, 0);
     box-shadow: 0 0 6px 3px #0000000a;
+
+  }
+  .navbar-nav {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
   }
 
   .navbar-brand {
+
+    color:#FFF;
     font-weight: 700;
     font-size: 16px;
   }
@@ -18,16 +32,16 @@
 
 
   .nav-link {
-    padding: 20px;
+    width: 100%;
+    padding: 5px;
     margin: 5px 0px;
-    color: black;
-    background: #f1f1f1;
+    color: white;
     border-radius: 10px;
+    text-align: center;
   }
   .active-link {
-    padding: 20px;
-    color: white;
-    background: black;
+    background: #ffffff42;
+    padding: 5px;
     border-radius:10px;
   }
 
