adeed csv database

--- a/src/app/pages/hotels/hotels.component.html
+++ b/src/app/pages/hotels/hotels.component.html
@@ -1,4 +1,11 @@
-<div class="hotels-container" >
+<div *ngFor="let hData of hotelDataV">
+
+  <p> ffff{{ hData }}</p>
+
+  </div>
+
+
+<!--<div class="hotels-container" >
 
   <div class="hotel_card" *ngFor="let hData of hotelData">
     <div class="hotel_card_img">
@@ -13,4 +20,4 @@
     </a>
   </div>
 
-</div>
+</div>-->
