--- a/src/app/pages/hotels/hotels.component.html
+++ b/src/app/pages/hotels/hotels.component.html
@@ -1,11 +1,4 @@
-<div>
-
-  <p> ffff</p>
-
-  </div>
-
-
-<!--<div class="hotels-container" >
+<div class="hotels-container" >
 
   <div class="hotel_card" *ngFor="let hData of hotelData">
     <div class="hotel_card_img">
@@ -20,4 +13,4 @@
     </a>
   </div>
 
-</div>-->
+</div>
