--- a/src/app/modules/admin/components/admin-header/admin-header.component.css
+++ b/src/app/modules/admin/components/admin-header/admin-header.component.css
@@ -67,17 +67,29 @@
 @media screen and (min-width:600px) {
 
 
+  .navbar .container-fluid {
+    display: flex;
+    flex-direction: column;
+
+  }
   .navbar {
-    background: white;
+    background: rgb(0, 0, 0);
     box-shadow: 0 0 6px 3px #0000000a;
+
+  }
+  .navbar-nav {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
   }
 
   .navbar-brand {
-    margin: 10px 0 0 5px;
+
+    color:#FFF;
     font-weight: 700;
-    height: 50px;
-    font-size: 32px;
-    line-height: 16px;
+    font-size: 16px;
   }
 
   .navbar-brand-additional {
@@ -86,16 +98,16 @@
 
 
   .nav-link {
-    padding: 20px;
+    width: 100%;
+    padding: 5px;
     margin: 5px 0px;
-    color: black;
-    background: #f1f1f1;
+    color: white;
     border-radius: 10px;
+    text-align: center;
   }
   .active-link {
-    padding: 20px;
-    color: white;
-    background: black;
+    background: #ffffff42;
+    padding: 5px;
     border-radius:10px;
   }
 
@@ -110,19 +122,6 @@
     background-image: url(/assets/svg_files/list.svg);
   }
 
-  li.nav-item {
-    width: 25%;
-    text-align: center;
-    margin: 0 5px;
-}
-  .navbar ul {
-        display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-content: flex-start;
-    justify-content: space-evenly;
-  }
-
 }
 
 /* ---------------------------------------------------------- */
@@ -133,73 +132,17 @@
 
 @media screen and (min-width:992px) {
 
-
-  .navbar {
-
-    background: white;
-    box-shadow: 0 0 6px 3px #0000000a;
-  }
-  .navbar>.container-fluid{
-
-
-    margin: 0 auto;
+  .navbar .container-fluid {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     max-width: 1000px;
-  }
-  .navbar-nav {
-    padding: 5px;
-    border-radius: 20px;
+
   }
 
   .navbar-brand {
     margin: 0px 0px 0px 10px;
-    font-weight: 700;
-    height: 50px;
-    font-size: 40px;
-    line-height: 20px;
-  }
-
-  .navbar-brand-additional {
-    font-size: 13px;
-  }
-
-  li.nav-item {
-    width: unset;
-    text-align: unset;
-    margin: unset;
 }
-
-  .nav-link {
-    width: 100px;
-    padding: 20px;
-    margin: 0px 5px 0px 0px;
-    color: black;
-    text-align: center;
-  }
-  .active-link {
-    padding: 20px;
-    margin: 0px 5px 0px 0px;
-    color: white;
-    background: black;
-    border-radius:10px;
-  }
-
-  .navbar-collapse {
-    padding: 0px;
-    border-radius:20px;
-    background: unset;
-  }
-
-  .navbar-toggler {
-    font-size: 30px;
-    border: solid 0;
-    background: #F1F1F1;
-    padding: 10px;
-    border-radius: 20px;
-  }
-  .navbar-toggler-icon {
-    background-image: url(/assets/svg_files/list.svg);
-  }
-
 
 }
 
